feat: create products and categories
